send form layout in place

--- a/js/src/dapps/basiccoin/Send/send.css
+++ b/js/src/dapps/basiccoin/Send/send.css
@@ -18,3 +18,12 @@
 @import '../_form.css';
 @import '../_status.css';
 @import '../_vars.css';
+
+a.link, a.link:hover, a.link:visited {
+  color: $bgSend;
+  cursor: pointer;
+}
+
+.button {
+  background: $bgSend;
+}
