basic events display in-place, functionally complete

--- a/js/src/dapps/basiccoin/Deploy/Event/event.css
+++ b/js/src/dapps/basiccoin/Deploy/Event/event.css
@@ -36,10 +36,14 @@
   text-align: right;
 }
 
-.frominfo {
+.address {
   text-align: left;
 }
 
 .description {
   text-align: left;
+}
+
+.center {
+  text-align: right;
 }
