--- a/js/src/dapps/basiccoin/Overview/Owner/owner.css
+++ b/js/src/dapps/basiccoin/Overview/Owner/owner.css
@@ -35,11 +35,12 @@
 
 .tokens>div {
   border-radius: 1px;
-  background: rgba(255, 240, 240, 1);
-  padding: 1em 2em;
-  margin: 0 0 0.5em 0.5em;
+  background: #889;
+  padding: 1em;
+  margin: 0 0 0.25em 0.25em;
   display: inline-block;
   white-space: nowrap;
+  color: white;
 }
 
 .icon {
