--- a/js/src/dapps/basiccoin/Deploy/Event/event.css
+++ b/js/src/dapps/basiccoin/Deploy/Event/event.css
@@ -15,6 +15,19 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+a.link, a.link:visited {
+  text-decoration: none;
+}
+
+a.link:hover {
+  text-decoration: underline;
+}
+
+a.link, a.link:hover, a.link:visited {
+  color: #822;
+  cursor: pointer;
+}
+
 .mined {
 }
 
