--- a/js/src/dapps/basiccoin/Container/container.css
+++ b/js/src/dapps/basiccoin/Container/container.css
@@ -16,7 +16,12 @@
 */
 
 .content {
-  padding: 0 2em;
-  margin-bottom: 4em;
+  padding: 4em;
+  margin-bottom: 0.25em;
   text-align: center;
+}
+
+.content:nth-child(odd) {
+  background: whitesmoke;
+  border: 1px solid #eee;
 }
