--- a/js/src/dapps/basiccoin/_form.css
+++ b/js/src/dapps/basiccoin/_form.css
@@ -50,6 +50,7 @@
 .form input,
 .form select {
   width: 18em;
+  color: #444;
   background: rgba(255, 255, 255, 0.25);
   border-radius: 1px;
   border: 1px solid rgba(0, 0, 0, 0.25);
