--- a/js/src/dapps/basiccoin/Deploy/Events/events.css
+++ b/js/src/dapps/basiccoin/Deploy/Events/events.css
@@ -26,7 +26,7 @@
 }
 
 .eventList tr:nth-child(even) {
-  background: #faf5f5;
+  background: rgba(102, 34, 34, 0.075);
 }
 
 .eventList tr:nth-child(odd) {
