connection dialog for "busy connecting"

--- a/js/src/ui/Modal/modal.css
+++ b/js/src/ui/Modal/modal.css
@@ -41,6 +41,10 @@
   background: rgba(0, 0, 0, 0.5) !important;
 }
 
+.content div {
+  transition: none !important;
+}
+
 .title {
   padding: 1em;
   margin-bottom: 0;
@@ -62,4 +66,5 @@
 
 .overlay {
   background: rgba(255, 255, 255, 0.5) !important;
+  transition: none !important;
 }
