alignment back to normal

--- a/js/src/dapps/registry/accounts/accounts.css
+++ b/js/src/dapps/registry/accounts/accounts.css
@@ -33,6 +33,6 @@
 }
 .menuText {
   display: inline-block;
-  line-height: 20px;
-  vertical-align: middle;
+  line-height: 24px;
+  vertical-align: top;
 }
