--- a/js/src/views/Dapps/Summary/summary.css
+++ b/js/src/views/Dapps/Summary/summary.css
@@ -1,1 +1,26 @@
+/* Copyright 2015, 2016 Ethcore (UK) Ltd.
+/* This file is part of Parity.
+/*
+/* Parity is free software: you can redistribute it and/or modify
+/* it under the terms of the GNU General Public License as published by
+/* the Free Software Foundation, either version 3 of the License, or
+/* (at your option) any later version.
+/*
+/* Parity is distributed in the hope that it will be useful,
+/* but WITHOUT ANY WARRANTY; without even the implied warranty of
+/* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+/* GNU General Public License for more details.
+/*
+/* You should have received a copy of the GNU General Public License
+/* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
+*/
 
+.image {
+  float: left;
+  text-align: left;
+  margin-right: 1em !important;
+  border-radius: 50%;
+  margin: 0;
+  width: 56px;
+  height: 56px;
+}
