--- a/js/src/reset.css
+++ b/js/src/reset.css
@@ -14,6 +14,7 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
+
 :root,
 :root body {
   margin: 0;
@@ -25,6 +26,11 @@
   color: rgba(255, 255, 255, 0.75);
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300 !important;
+}
+
+:root * {
+  font-weight: 300 !important;
 }
 
 :root a,
