--- a/js/src/views/Signer/components/TransactionPendingForm/TransactionPendingFormConfirm/TransactionPendingFormConfirm.css
+++ b/js/src/views/Signer/components/TransactionPendingForm/TransactionPendingFormConfirm/TransactionPendingFormConfirm.css
@@ -15,7 +15,7 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 .confirmForm {
-  margin-top: -30px;
+  margin-top: -45px;
 }
 
 .confirmButton {
@@ -28,4 +28,14 @@
   height: 24px;
   vertical-align: middle;
   margin-left: 12px;
+}
+
+.passwordHint {
+  font-size: 0.75em;
+  color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 0.75em;
+}
+
+.passwordHint span {
+  opacity: 0.85;
 }
