--- a/js/src/ui/Actionbar/Search/search.css
+++ b/js/src/ui/Actionbar/Search/search.css
@@ -14,6 +14,10 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
+.searchcontainer {
+  display: flex;
+  overflow: hidden;
+}
 
 .searchButton {
   min-width: 50px !important;
@@ -21,6 +25,6 @@
 
 .searchInput {
   transition: width 450ms !important;
-  transition: visibility 0 450ms !important;
   white-space: nowrap;
+  overflow: hidden;
 }
