--- a/js/src/ui/Tags/tags.less
+++ b/js/src/ui/Tags/tags.less
@@ -1,4 +1,4 @@
-.tags {
+:local(.tags) {
   display: flex;
   flex-wrap: wrap;
   position: absolute;
@@ -6,10 +6,14 @@
   top: 0;
 }
 
-.tag {
+:local(.tag) {
   font-size: 0.9rem;
   background: rgba(255, 255, 255, 0.07);
   border-radius: 16px;
   margin: 0.75em 0.5em 0 0;
   padding: 0.25em 1em;
+
+  &.tagClickable:hover {
+    cursor: pointer;
+  }
 }
