Allow tags for Accounts, Addresses and Contracts (#2712)
* Added tag to the editMeta Modal (#2643)

* Added Tags to ui and to contract/address/account Header (#2643)

* Added tags to summary (#2643)

* Added Search capabilities to contracts/address book/accounts from tokens
(#2643)

* fixes eslint

* Using Chips/Tokens for search (#2643)

* Add search tokens, clickable from List (#2643)

* Add sort capabilities to Accounts / Addresses / Contracts (#2643)

* Fixes formatting issues + state updates after component unmount bug
(#2643)

* Remove unused import

* Small fixes for PR #2697

* Added default sort order for Contracts/Addresses/Accounts

* Using official `material-ui-chip-input` NPM package

* Removed LESS from webpack

--- a/js/src/ui/Actionbar/Sort/sort.css
+++ b/js/src/ui/Actionbar/Sort/sort.css
@@ -14,18 +14,7 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.container {
-  padding: 0em;
-}
 
-.padded {
-  padding: 1.5em;
-  background: rgba(0, 0, 0, 0.8) !important;
-  border-radius: 0 !important;
-  position: relative;
-  overflow: auto;
-}
-
-.light .padded {
-  background: rgba(0, 0, 0, 0.5) !important;
+.sortButton {
+  min-width: 50px !important;
 }
