--- a/js/src/ui/Actionbar/Search/search.css
+++ b/js/src/ui/Actionbar/Search/search.css
@@ -14,18 +14,30 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.container {
-  padding: 0em;
+.searchcontainer {
+  display: flex;
+  overflow: hidden;
 }
 
-.padded {
-  padding: 1.5em;
-  background: rgba(0, 0, 0, 0.8) !important;
-  border-radius: 0 !important;
+.searchButton {
+  min-width: 50px !important;
+}
+
+.input {
+  width: 500px !important;
+}
+
+.inputContainer {
+  transition: width 450ms ease-in-out 0ms, height 0ms ease-in-out 0ms;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 500px;
+  height: 100%;
   position: relative;
-  overflow: auto;
 }
 
-.light .padded {
-  background: rgba(0, 0, 0, 0.5) !important;
+.inputContainerShown {
+  transition: width 450ms ease-in-out 0ms, height 0ms ease-in-out 400ms;
+  width: 0;
+  height: 0;
 }
