--- a/js/src/ui/Form/InputAddress/inputAddress.css
+++ b/js/src/ui/Form/InputAddress/inputAddress.css
@@ -22,6 +22,10 @@
   padding-left: 48px !important;
 }
 
+.inputEmpty input {
+  padding-left: 0 !important;
+}
+
 .icon {
   position: absolute;
   top: 35px;
