--- a/js/src/ui/Actionbar/Search/search.css
+++ b/js/src/ui/Actionbar/Search/search.css
@@ -27,6 +27,18 @@
   width: 500px !important;
 }
 
+.input > div:nth-child(2) {
+  bottom: 16px !important;
+}
+
+.input > div:nth-child(3) {
+  margin-bottom: 18px !important;
+}
+
+.input > div:nth-child(3) > div:first-child {
+  height: 42px !important;
+}
+
 .inputContainer {
   transition: width 450ms ease-in-out 0ms, height 0ms ease-in-out 0ms;
   white-space: nowrap;
