--- a/js/src/ui/Container/container.css
+++ b/js/src/ui/Container/container.css
@@ -18,14 +18,23 @@
   padding: 0em;
 }
 
+.compact,
 .padded {
-  padding: 1.5em;
   background: rgba(0, 0, 0, 0.8) !important;
   border-radius: 0 !important;
   position: relative;
   overflow: auto;
 }
 
+.compact {
+  padding: 0 1.5em;
+}
+
+.padded {
+  padding: 1.5em;
+}
+
+.light .compact,
 .light .padded {
   background: rgba(0, 0, 0, 0.5) !important;
 }
