Event into own component, align with transactions

--- a/js/src/views/Contract/contract.css
+++ b/js/src/views/Contract/contract.css
@@ -56,3 +56,10 @@
 .pending {
   opacity: 0.5;
 }
+
+.timestamp {
+  padding-top: 1.5em;
+  text-align: right;
+  line-height: 1.5em;
+  opacity: 0.5;
+}
