--- a/js/src/views/Contract/contract.css
+++ b/js/src/views/Contract/contract.css
@@ -24,9 +24,12 @@
   border-spacing: 0;
 }
 
-.event {
+.events tr {
+  line-height: 32px;
   vertical-align: top;
-  line-height: 26px;
+}
+
+.event {
 }
 
 .event td {
@@ -41,9 +44,6 @@
 .key {
   text-align: right;
   color: #aaa;
-}
-
-.value {
 }
 
 .event td div {
@@ -62,4 +62,29 @@
   text-align: right;
   line-height: 1.5em;
   opacity: 0.5;
+  white-space: nowrap;
+}
+
+.eventDetails {
+}
+
+.eventType {
+}
+
+.eventParams {
+  padding-left: 2em;
+}
+
+.eventValue {
+  margin-top: -16px;
+}
+
+.eventAddress {
+  display: inline-block;
+  position: relative;
+}
+
+.eventIdentityicon {
+  margin-bottom: -10px;
+  margin-right: 0.5em;
 }
