Modify hint with password change // Better tabs (#2556)

--- a/js/src/modals/PasswordManager/passwordManager.css
+++ b/js/src/modals/PasswordManager/passwordManager.css
@@ -65,3 +65,9 @@
   height: 0;
   background-color: transparent !important;
 }
+
+.form {
+  margin-top: 0;
+  padding: 0 0.5rem 1rem;
+  background-color: rgba(255, 255, 255, 0.05);
+}
