--- a/js/src/ui/Form/InputChip/inputChip.css
+++ b/js/src/ui/Form/InputChip/inputChip.css
@@ -18,11 +18,13 @@
 .input {
   div[type="button"] {
     margin: 14px 0.5em 0 0 !important;
+    background: rgba(255, 255, 255, 0.1) !important;
 
     span {
       font-size: 0.75em !important;
       line-height: 1em !important;
       padding: 0.25em 0.5em !important;
+      background: transparent !important;
     }
 
     svg {
@@ -35,5 +37,10 @@
   /* the only seeimngly robust way to get to it, no other attributes to match */
   div[style*="256px"] {
     margin-bottom: 14px !important;
+  }
+
+  /* hint text, same as above */
+  div[style*="bottom: 20px"] {
+    bottom: 12px !important;
   }
 }
