--- a/js/src/views/ParityBar/parityBar.css
+++ b/js/src/views/ParityBar/parityBar.css
@@ -86,8 +86,13 @@
   margin-left: 1em;
 }
 
-.button {
+.button, .parityButton {
   overflow: visible !important;
+}
+
+.parityButton img {
+  width: auto !important;
+  height: 24px;
 }
 
 .label {
