--- a/js/src/views/ParityBar/parityBar.css
+++ b/js/src/views/ParityBar/parityBar.css
@@ -90,6 +90,10 @@
   overflow: visible !important;
 }
 
+.button svg {
+  fill: white !important;
+}
+
 .label {
   position: relative;
   display: inline-block;
