Remove signer icons (#3039)
* Remove signer icons

* Linting fixes

--- a/js/src/views/ParityBar/parityBar.css
+++ b/js/src/views/ParityBar/parityBar.css
@@ -91,6 +91,10 @@
   overflow: visible !important;
 }
 
+.button svg {
+  fill: white !important;
+}
+
 .label {
   position: relative;
   display: inline-block;
