--- a/js/src/modals/Transfer/transfer.css
+++ b/js/src/modals/Transfer/transfer.css
@@ -25,6 +25,13 @@
   position: relative;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  flex-direction: column;
+}
+
 .columns>div {
   flex: 0 1 50%;
   width: 50%;
@@ -130,4 +137,17 @@
 
 .inputoverride {
   padding-top: 24px !important;
+}
+
+.contentTitle {
+  font-size: 1.2rem;
+}
+
+.chart {
+  position: absolute;
+  width: 100%;
+}
+
+.gasPriceDesc {
+  font-size: 0.9em;
 }
