Update Parity logo (#3036)
* Add new parity logos

* FirstRun logo

* Tabbar logo

* Remove duplicated block image

* Parity favicons

* Remove images to be replaced

* Paritybar logo

* Add favicon

* Adding HTML Loader for Webpack for image linking

--- a/js/src/views/ParityBar/parityBar.css
+++ b/js/src/views/ParityBar/parityBar.css
@@ -87,8 +87,13 @@
   margin-left: 1em;
 }
 
-.button {
+.button, .parityButton {
   overflow: visible !important;
+}
+
+.parityButton img {
+  width: auto !important;
+  height: 24px;
 }
 
 .button svg {
@@ -128,7 +133,7 @@
   color: white !important;
 }
 
-.header svg ,
+.header svg,
 .coner svg {
   fill: white !important;
 }
