--- a/js/src/ui/BlockStatus/blockStatus.css
+++ b/js/src/ui/BlockStatus/blockStatus.css
@@ -14,54 +14,9 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.status {
-  clear: both;
-  padding: 1.5em;
-  text-align: right;
-  color: #ddd;
+
+.blockNumber {
 }
 
-.title {
-  margin: 0 0.5em 0 2em;
-}
-
-.block {
-}
-
-.netinfo {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin-top: 0.25em;
-}
-
-.netinfo > * {
-  display: inline-block;
-  margin-left: 1em;
-}
-
-.network {
-  padding: 0.25em 0.5em;
-  display: inline-block;
-  border-radius: 4px;
-  line-height: 1.2;
-  text-transform: uppercase;
-}
-
-.networklive {
-  background: rgb(0, 136, 0);
-}
-
-.networktest {
-  background: rgb(136, 0, 0);
-}
-
-.peers {
-}
-
-.version {
-}
-
-.syncing {
+.syncStatus {
 }
