--- a/js/src/views/Dapps/dapps.css
+++ b/js/src/views/Dapps/dapps.css
@@ -15,8 +15,9 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 .list {
-  column-count: 2;
-  column-gap: 0.25em;
+  display: flex;
+  flex-wrap: wrap;
+  margin: -0.125em;
 }
 
 .list+.list {
@@ -24,7 +25,7 @@
 }
 
 .item {
-  display: inline-block;
-  margin: 0 0 0.25em;
-  width: 100%;
+  padding: 0.125em;
+  flex: 0 1 50%;
+  box-sizing: border-box;
 }
