Added Enode to JSAPI // Use it to display in Status (#3106)

--- a/js/src/views/Application/Status/status.css
+++ b/js/src/views/Application/Status/status.css
@@ -15,14 +15,22 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 .status {
-  clear: both;
   padding: 1.5em;
   text-align: right;
   color: #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .title {
   margin: 0 0.5em 0 2em;
+}
+
+.enode {
+  width: 45em;
+  word-wrap: break-word;
+  margin: 0.5em 0 0.25em;
 }
 
 .block {
