--- a/js/src/views/Application/TabBar/tabBar.css
+++ b/js/src/views/Application/TabBar/tabBar.css
@@ -23,6 +23,11 @@
 .tabs {
   width: 100%;
   position: relative;
+  display: flex;
+
+  & > * {
+    flex: 1;
+  }
 }
 
 .tabs button,
@@ -38,6 +43,7 @@
 
 button.tabactive,
 button.tabactive:hover {
+  color: white !important;
   background: rgba(0, 0, 0, 0.25) !important;
   border-radius: 4px 4px 0 0;
 }
