Using MobX in Contract Edition // Save to Localstorage #2276

--- a/js/src/views/WriteContract/writeContract.css
+++ b/js/src/views/WriteContract/writeContract.css
@@ -35,6 +35,15 @@
   }
 }
 
+.centeredMessage {
+  width: 100%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .editor {
   flex: 65%;
   width: 100%;
