--- a/js/src/ui/Actionbar/Import/import.css
+++ b/js/src/ui/Actionbar/Import/import.css
@@ -21,18 +21,20 @@
   border-width: 2px;
   border-color: #666;
   border-style: dashed;
-  border-radius: 5px;
+  border-radius: 10px;
 
-  background-color: rgba(50, 50, 50, 0.4);
+  background-color: rgba(50, 50, 50, 0.2);
 
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.2em;
 
+  transition: all 0.5s ease;
+
   &:hover {
     cursor: pointer;
-    border-style: solid;
+    border-radius: 0;
     background-color: rgba(50, 50, 50, 0.5);
   }
 }
