--- a/js/src/modals/AddContract/addContract.css
+++ b/js/src/modals/AddContract/addContract.css
@@ -18,3 +18,15 @@
 .spaced {
   margin: 0.25em 0;
 }
+
+.typeContainer {
+  display: flex;
+  flex-direction: column;
+
+  .desc {
+    font-size: 0.8em;
+    margin-bottom: 0.5em;
+    color: #ccc;
+    z-index: 2;
+  }
+}
