Adding loader of Snippets // Export with name #3279

--- a/js/src/modals/LoadContract/loadContract.css
+++ b/js/src/modals/LoadContract/loadContract.css
@@ -32,6 +32,11 @@
 
   p {
     line-height: 48px;
+    height: 48px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
     margin: 0;
     font-size: 1.2em;
   }
