--- a/js/src/modals/SMSVerification/SendConfirmation/sendConfirmation.css
+++ b/js/src/modals/SMSVerification/SendConfirmation/sendConfirmation.css
@@ -14,6 +14,7 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.spacing {
-  margin-top: 1.5em;
+
+.centered {
+  text-align: center;
 }
