--- a/js/src/dapps/tokenreg/Application/application.css
+++ b/js/src/dapps/tokenreg/Application/application.css
@@ -20,3 +20,15 @@
   flex-direction: column;
   align-items: center;
 }
+
+.warning {
+  background: #f80;
+  bottom: 0;
+  color: #fff;
+  left: 0;
+  opacity: 1;
+  padding: 1.5em;
+  position: fixed;
+  right: 50%;
+  z-index: 100;
+}
